# zarr-mycodec

./: .gitignore  .gitmodules  README.md  activate_librmn.sh  delete_me.py  manifest.json  mycodec.py  pixi.toml  pyproject.toml  requirements.txt  script.py  setup.sh  xyz.std  zarr2.py
data/: source_data.fst
share/: my_codec.py
share/utils/: create_sample.py
share/virtualizarr/: check_manifest.py
tests/: chunk_reference_demo.py  create_sample.py  debug.py  decode_logic.py  delete.py  format_test.py  logic.py  print_logic.py  run_codec.py  spy_test.py  test-codec.py  test_codec.py  test_codec_logic.py  test_fst_codec.py  test_metadata.py  test_real_fst.py
